# fat32-lib

./: CMakeLists.txt  README.md
src/: AbstractFileSystem.cpp  AbstractFileSystem.hpp  AbstractFsObject.hpp  BlockDevice.cpp  BlockDevice.hpp  ByteBuffer.hpp  DummyBlockDevice.hpp  FileSystem.cpp  FileSystem.hpp  FileSystemFactory.cpp  FileSystemFactory.hpp  FsDirectory.cpp  FsDirectory.hpp  FsDirectoryEntry.cpp  FsDirectoryEntry.hpp  FsFile.hpp  FsObject.cpp  FsObject.hpp  ImageBlockDevice.hpp  ReadOnlyException.hpp  main.cpp  strutil.hpp
src/de/waldheinz/fs/: FileSystemFactory.java  (+1 more)
src/fat/: AbstractDirectory.cpp  AbstractDirectory.hpp  AkaiFatFileSystem.cpp  AkaiFatFileSystem.hpp  AkaiFatLfnDirectory.cpp  AkaiFatLfnDirectory.hpp  AkaiFatLfnDirectoryEntry.hpp  AkaiNameGenerator.cpp  AkaiNameGenerator.hpp  AkaiPart.cpp  AkaiPart.hpp  BootSector.cpp  BootSector.hpp  ClusterChain.hpp  ClusterChainDirectory.cpp  ClusterChainDirectory.hpp  DirectoryFullException.hpp  DosUtils.cpp  Fat.cpp  Fat.hpp  Fat16BootSector.hpp  Fat16RootDirectory.cpp  Fat16RootDirectory.hpp  Fat32BootSector.hpp  FatDirectoryEntry.hpp  FatFile.cpp  FatFile.hpp  FatFileSystem.cpp  FatFileSystem.hpp  FatLfnDirectory.cpp  FatLfnDirectory.hpp  FatLfnDirectoryEntry.cpp  FatLfnDirectoryEntry.hpp  FatType.cpp  FatType.hpp  FsInfoSector.cpp  FsInfoSector.hpp  LittleEndian.cpp  LittleEndian.hpp  Sector.cpp  (+5 more)
src/util/: AbstractRawVolume.cpp  AbstractRawVolume.hpp  FileDisk.hpp  ImageBuilder.cpp  ImageBuilder.hpp  RamDisk.cpp  RamDisk.hpp  RawOsxVolume.cpp  RawWindowsVolume.cpp  RawWindowsVolume.hpp
(+15 files in other folders)
